--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -34,12 +34,6 @@
   register: prelink_exists
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - high_complexity | bool
-  - restrict_strategy | bool
-  - reboot_required | bool
-  - high_severity | bool
-  - grub2_enable_fips_mode | bool
-  - medium_disruption | bool
   tags:
   - grub2_enable_fips_mode
   - high_severity
@@ -129,12 +123,6 @@
   check_mode: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - high_complexity | bool
-  - restrict_strategy | bool
-  - reboot_required | bool
-  - high_severity | bool
-  - grub2_enable_fips_mode | bool
-  - medium_disruption | bool
   tags:
   - grub2_enable_fips_mode
   - high_severity
@@ -254,12 +242,6 @@
   check_mode: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - high_complexity | bool
-  - restrict_strategy | bool
-  - reboot_required | bool
-  - high_severity | bool
-  - grub2_enable_fips_mode | bool
-  - medium_disruption | bool
   tags:
   - grub2_enable_fips_mode
   - high_severity
@@ -351,12 +333,6 @@
   check_mode: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - high_complexity | bool
-  - restrict_strategy | bool
-  - reboot_required | bool
-  - high_severity | bool
-  - grub2_enable_fips_mode | bool
-  - medium_disruption | bool
   tags:
   - grub2_enable_fips_mode
   - high_severity
@@ -383,12 +359,6 @@
   check_mode: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - high_complexity | bool
-  - restrict_strategy | bool
-  - reboot_required | bool
-  - high_severity | bool
-  - grub2_enable_fips_mode | bool
-  - medium_disruption | bool
   tags:
   - grub2_enable_fips_mode
   - high_severity
@@ -510,12 +480,6 @@
   check_mode: false
   when:
   - ansible_distribution == "Fedora"
-  - no_reboot_needed | bool
-  - high_severity | bool
-  - unknown_strategy | bool
-  - ensure_gpgcheck_globally_activated | bool
-  - medium_disruption | bool
-  - low_complexity | bool
   tags:
   - ensure_gpgcheck_globally_activated
   - high_severity
@@ -543,7 +507,7 @@
     dest: /etc/yum.conf
     section: main
     option: gpgcheck
-    value: 1
+    value: "1"
     create: false
   when:
   - (ansible_distribution == "RedHat" or ansible_distribution == "CentOS" or yum_config_file.stat.exists)
@@ -580,7 +544,7 @@
     dest: /etc/dnf/dnf.conf
     section: main
     option: gpgcheck
-    value: 1
+    value: "1"
     create: false
   when:
   - ansible_distribution == "Fedora"
@@ -619,12 +583,6 @@
   check_mode: false
   when:
   - ansible_distribution == "Fedora"
-  - no_reboot_needed | bool
-  - high_severity | bool
-  - unknown_strategy | bool
-  - medium_disruption | bool
-  - ensure_gpgcheck_local_packages | bool
-  - low_complexity | bool
   tags:
   - ensure_gpgcheck_local_packages
   - high_severity
@@ -647,7 +605,7 @@
     dest: /etc/yum.conf
     section: main
     option: localpkg_gpgcheck
-    value: 1
+    value: "1"
     create: true
   when:
   - (ansible_distribution == "RedHat" or ansible_distribution == "CentOS" or yum_config_file.stat.exists)
@@ -679,7 +637,7 @@
     dest: /etc/dnf/dnf.conf
     section: main
     option: localpkg_gpgcheck
-    value: 1
+    value: "1"
     create: true
   when:
   - ansible_distribution == "Fedora"
@@ -727,13 +685,6 @@
   - NIST-800-171-3.4.8
   - PCI-DSS-Req-6.2
   - CJIS-5.10.4.1
-  when:
-  - no_reboot_needed | bool
-  - restrict_strategy | bool
-  - high_severity | bool
-  - ensure_redhat_gpgkey_installed | bool
-  - medium_complexity | bool
-  - medium_disruption | bool
 
 - name: Read signatures in GPG key
   command: gpg --with-fingerprint --with-colons "/etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release"
@@ -758,13 +709,6 @@
   - NIST-800-171-3.4.8
   - PCI-DSS-Req-6.2
   - CJIS-5.10.4.1
-  when:
-  - no_reboot_needed | bool
-  - restrict_strategy | bool
-  - high_severity | bool
-  - ensure_redhat_gpgkey_installed | bool
-  - medium_complexity | bool
-  - medium_disruption | bool
 
 - name: Set Fact - Installed GPG Fingerprints
   set_fact:
@@ -787,13 +731,6 @@
   - NIST-800-171-3.4.8
   - PCI-DSS-Req-6.2
   - CJIS-5.10.4.1
-  when:
-  - no_reboot_needed | bool
-  - restrict_strategy | bool
-  - high_severity | bool
-  - ensure_redhat_gpgkey_installed | bool
-  - medium_complexity | bool
-  - medium_disruption | bool
 
 - name: Set Fact - Valid fingerprints
   set_fact:
@@ -814,13 +751,6 @@
   - NIST-800-171-3.4.8
   - PCI-DSS-Req-6.2
   - CJIS-5.10.4.1
-  when:
-  - no_reboot_needed | bool
-  - restrict_strategy | bool
-  - high_severity | bool
-  - ensure_redhat_gpgkey_installed | bool
-  - medium_complexity | bool
-  - medium_disruption | bool
 
 - name: Import RedHat GPG key
   rpm_key:
@@ -972,12 +902,6 @@
   register: argcheck
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - grub2_audit_argument | bool
-  - restrict_strategy | bool
-  - reboot_required | bool
-  - medium_severity | bool
-  - medium_complexity | bool
-  - low_disruption | bool
   tags:
   - grub2_audit_argument
   - medium_severity
@@ -1090,12 +1014,6 @@
   register: argcheck
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - grub2_audit_backlog_limit_argument | bool
-  - restrict_strategy | bool
-  - reboot_required | bool
-  - medium_severity | bool
-  - medium_complexity | bool
-  - low_disruption | bool
   tags:
   - grub2_audit_backlog_limit_argument
   - medium_severity
@@ -3034,11 +2952,6 @@
   check_mode: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - disable_strategy | bool
-  - no_reboot_needed | bool
-  - medium_severity | bool
-  - low_disruption | bool
-  - low_complexity | bool
   tags:
   - service_debug-shell_disabled
   - medium_severity
@@ -3305,12 +3218,6 @@
   register: argcheck
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - restrict_strategy | bool
-  - reboot_required | bool
-  - medium_severity | bool
-  - medium_complexity | bool
-  - grub2_vsyscall_argument | bool
-  - low_disruption | bool
   tags:
   - grub2_vsyscall_argument
   - medium_severity
@@ -3466,12 +3373,6 @@
   register: argcheck
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - grub2_slub_debug_argument | bool
-  - restrict_strategy | bool
-  - reboot_required | bool
-  - medium_severity | bool
-  - medium_complexity | bool
-  - low_disruption | bool
   tags:
   - grub2_slub_debug_argument
   - medium_severity
@@ -3552,12 +3453,6 @@
   register: argcheck
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - restrict_strategy | bool
-  - reboot_required | bool
-  - medium_severity | bool
-  - medium_complexity | bool
-  - grub2_page_poison_argument | bool
-  - low_disruption | bool
   tags:
   - grub2_page_poison_argument
   - medium_severity
@@ -3639,12 +3534,6 @@
   changed_when: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - unknown_severity | bool
-  - mount_option_home_nosuid | bool
-  - no_reboot_needed | bool
-  - configure_strategy | bool
-  - low_complexity | bool
-  - high_disruption | bool
   tags:
   - mount_option_home_nosuid
   - unknown_severity
@@ -3733,12 +3622,6 @@
   changed_when: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - unknown_severity | bool
-  - no_reboot_needed | bool
-  - mount_option_var_tmp_nodev | bool
-  - configure_strategy | bool
-  - low_complexity | bool
-  - high_disruption | bool
   tags:
   - mount_option_var_tmp_nodev
   - unknown_severity
@@ -3806,12 +3689,6 @@
   changed_when: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - no_reboot_needed | bool
-  - configure_strategy | bool
-  - medium_severity | bool
-  - mount_option_dev_shm_nodev | bool
-  - low_complexity | bool
-  - high_disruption | bool
   tags:
   - mount_option_dev_shm_nodev
   - medium_severity
@@ -3897,12 +3774,6 @@
   changed_when: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - unknown_severity | bool
-  - mount_option_tmp_noexec | bool
-  - no_reboot_needed | bool
-  - configure_strategy | bool
-  - low_complexity | bool
-  - high_disruption | bool
   tags:
   - mount_option_tmp_noexec
   - unknown_severity
@@ -3988,12 +3859,6 @@
   changed_when: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - unknown_severity | bool
-  - mount_option_tmp_nosuid | bool
-  - no_reboot_needed | bool
-  - configure_strategy | bool
-  - high_disruption | bool
-  - low_complexity | bool
   tags:
   - mount_option_tmp_nosuid
   - unknown_severity
@@ -4079,12 +3944,6 @@
   changed_when: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - unknown_severity | bool
-  - no_reboot_needed | bool
-  - configure_strategy | bool
-  - mount_option_var_tmp_noexec | bool
-  - low_complexity | bool
-  - high_disruption | bool
   tags:
   - mount_option_var_tmp_noexec
   - unknown_severity
@@ -4152,12 +4011,6 @@
   changed_when: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - unknown_severity | bool
-  - no_reboot_needed | bool
-  - configure_strategy | bool
-  - low_complexity | bool
-  - mount_option_var_tmp_nosuid | bool
-  - high_disruption | bool
   tags:
   - mount_option_var_tmp_nosuid
   - unknown_severity
@@ -4225,12 +4078,6 @@
   changed_when: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - mount_option_dev_shm_nosuid | bool
-  - no_reboot_needed | bool
-  - configure_strategy | bool
-  - medium_severity | bool
-  - low_complexity | bool
-  - high_disruption | bool
   tags:
   - mount_option_dev_shm_nosuid
   - medium_severity
@@ -4316,12 +4163,6 @@
   changed_when: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - mount_option_dev_shm_noexec | bool
-  - no_reboot_needed | bool
-  - configure_strategy | bool
-  - medium_severity | bool
-  - low_complexity | bool
-  - high_disruption | bool
   tags:
   - mount_option_dev_shm_noexec
   - medium_severity
@@ -4407,12 +4248,6 @@
   changed_when: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - unknown_severity | bool
-  - no_reboot_needed | bool
-  - configure_strategy | bool
-  - mount_option_home_nodev | bool
-  - low_complexity | bool
-  - high_disruption | bool
   tags:
   - mount_option_home_nodev
   - unknown_severity
@@ -4480,12 +4315,6 @@
   changed_when: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - unknown_severity | bool
-  - mount_option_tmp_nodev | bool
-  - no_reboot_needed | bool
-  - configure_strategy | bool
-  - low_complexity | bool
-  - high_disruption | bool
   tags:
   - mount_option_tmp_nodev
   - unknown_severity
@@ -4608,12 +4437,6 @@
   check_mode: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - disable_strategy | bool
-  - no_reboot_needed | bool
-  - service_autofs_disabled | bool
-  - medium_severity | bool
-  - low_disruption | bool
-  - low_complexity | bool
   tags:
   - service_autofs_disabled
   - medium_severity
@@ -4802,12 +4625,6 @@
   check_mode: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - unknown_severity | bool
-  - disable_strategy | bool
-  - no_reboot_needed | bool
-  - service_rpcbind_disabled | bool
-  - low_disruption | bool
-  - low_complexity | bool
   tags:
   - service_rpcbind_disabled
   - unknown_severity
@@ -5401,12 +5218,6 @@
   check_mode: false
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - disable_strategy | bool
-  - no_reboot_needed | bool
-  - service_kdump_disabled | bool
-  - medium_severity | bool
-  - low_disruption | bool
-  - low_complexity | bool
   tags:
   - service_kdump_disabled
   - medium_severity
