--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,22 +22,22 @@ sysctl_net_ipv6_conf_default_accept_redirects_value: '0'
 sysctl_net_ipv6_conf_default_accept_ra_value: '0'
 var_selinux_state: enforcing
 var_selinux_policy_name: targeted
-var_accounts_password_minlen_login_defs: '12'
+var_accounts_password_minlen_login_defs: '15'
 var_password_pam_ucredit: '-1'
 var_password_pam_maxrepeat: '3'
 var_password_pam_ocredit: '-1'
 var_password_pam_lcredit: '-1'
-var_password_pam_minlen: '12'
+var_password_pam_minlen: '15'
 var_password_pam_maxclassrepeat: '4'
 var_password_pam_dcredit: '-1'
 var_password_pam_difok: '4'
-var_accounts_passwords_pam_faillock_deny: '3'
+var_accounts_passwords_pam_faillock_deny: '5'
 var_accounts_passwords_pam_faillock_unlock_time: '0'
 var_password_pam_unix_remember: '5'
 var_accounts_passwords_pam_faillock_fail_interval: '900'
 var_accounts_max_concurrent_login_sessions: '10'
 var_accounts_user_umask: '027'
-var_sshd_set_keepalive: '0'
+var_sshd_set_keepalive: '10h'
 sshd_approved_macs: hmac-sha2-512,hmac-sha2-256,hmac-sha1,hmac-sha1-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com
 sshd_idle_timeout_value: '600'
 accounts_max_concurrent_login_sessions: true
@@ -86,8 +86,8 @@ kernel_module_sctp_disabled: true
 low_complexity: true
 low_disruption: true
 low_severity: true
-medium_complexity: true
-medium_disruption: true
+medium_complexity: false
+medium_disruption: false
 medium_severity: true
 mount_option_dev_shm_nodev: true
 mount_option_dev_shm_noexec: true
