--- a/tasks/disable.yml
+++ b/tasks/disable.yml
@@ -12,7 +12,6 @@
   - disable_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-80449-2
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-6(1)
@@ -20,7 +19,6 @@
   - NIST-800-171-3.4.5
   when:
   - disable_strategy | bool
-  - no_reboot_needed | bool
   - disable_ctrlaltdel_burstaction | bool
   - high_severity | bool
   - low_disruption | bool
@@ -33,7 +31,6 @@
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
   - disable_strategy | bool
-  - no_reboot_needed | bool
   - high_severity | bool
   - disable_ctrlaltdel_reboot | bool
   - low_disruption | bool
@@ -44,7 +41,6 @@
   - disable_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27511-5
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-6(1)
@@ -352,7 +348,6 @@
   - disable_strategy | bool
   - package_abrt_removed | bool
   - medium_severity | bool
-  - no_reboot_needed | bool
   - low_disruption | bool
   - low_complexity | bool
   tags:
@@ -361,7 +356,6 @@
   - disable_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-81040-8
 
 - name: Remove unwanted packages
@@ -382,11 +376,9 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-80169-6
   when:
   - unknown_severity | bool
-  - no_reboot_needed | bool
   - disable_users_coredumps | bool
   - restrict_strategy | bool
   - low_disruption | bool
@@ -406,7 +398,6 @@
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
   - disable_strategy | bool
-  - no_reboot_needed | bool
   - service_autofs_disabled | bool
   - medium_severity | bool
   - low_disruption | bool
@@ -417,7 +408,6 @@
   - disable_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27498-5
   - NIST-800-53-CM-7(a)
   - NIST-800-53-CM-7(b)
@@ -442,7 +432,6 @@
   - disable_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27498-5
   - NIST-800-53-CM-7(a)
   - NIST-800-53-CM-7(b)
@@ -461,7 +450,6 @@
   - '"autofs.socket" in socket_file_exists.stdout_lines[1]'
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
   - disable_strategy | bool
-  - no_reboot_needed | bool
   - service_autofs_disabled | bool
   - medium_severity | bool
   - low_disruption | bool
@@ -472,7 +460,6 @@
   - disable_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27498-5
   - NIST-800-53-CM-7(a)
   - NIST-800-53-CM-7(b)
@@ -496,7 +483,6 @@
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
   - unknown_severity | bool
   - disable_strategy | bool
-  - no_reboot_needed | bool
   - service_rpcbind_disabled | bool
   - low_disruption | bool
   - low_complexity | bool
@@ -506,7 +492,6 @@
   - disable_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-80230-6
 
 - name: Unit Socket Exists - rpcbind.socket
@@ -525,7 +510,6 @@
   - disable_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-80230-6
 
 - name: Disable socket rpcbind
@@ -539,7 +523,6 @@
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
   - unknown_severity | bool
   - disable_strategy | bool
-  - no_reboot_needed | bool
   - service_rpcbind_disabled | bool
   - low_disruption | bool
   - low_complexity | bool
@@ -549,7 +532,6 @@
   - disable_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-80230-6
 
 - name: Disable service debug-shell
@@ -566,7 +548,6 @@
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
   - disable_strategy | bool
-  - no_reboot_needed | bool
   - medium_severity | bool
   - low_disruption | bool
   - low_complexity | bool
@@ -576,7 +557,6 @@
   - disable_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-80206-6
   - NIST-800-171-3.4.5
 
@@ -596,7 +576,6 @@
   - disable_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-80206-6
   - NIST-800-171-3.4.5
 
@@ -610,7 +589,6 @@
   - '"debug-shell.socket" in socket_file_exists.stdout_lines[1]'
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
   - disable_strategy | bool
-  - no_reboot_needed | bool
   - medium_severity | bool
   - low_disruption | bool
   - low_complexity | bool
@@ -620,7 +598,6 @@
   - disable_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-80206-6
   - NIST-800-171-3.4.5
 
@@ -638,7 +615,6 @@
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
   - disable_strategy | bool
-  - no_reboot_needed | bool
   - service_kdump_disabled | bool
   - medium_severity | bool
   - low_disruption | bool
@@ -649,7 +625,6 @@
   - disable_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-80258-7
   - NIST-800-53-CM-7(a)
   - NIST-800-53-CM-7(b)
@@ -672,7 +647,6 @@
   - disable_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-80258-7
   - NIST-800-53-CM-7(a)
   - NIST-800-53-CM-7(b)
@@ -689,7 +663,6 @@
   - '"kdump.socket" in socket_file_exists.stdout_lines[1]'
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
   - disable_strategy | bool
-  - no_reboot_needed | bool
   - service_kdump_disabled | bool
   - medium_severity | bool
   - low_disruption | bool
@@ -700,9 +673,57 @@
   - disable_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-80258-7
   - NIST-800-53-CM-7(a)
   - NIST-800-53-CM-7(b)
   - NIST-800-53-CM-6(a)
   - DISA-STIG-RHEL-07-021300
+
+- name: Verify that Interactive Boot is Disabled in /etc/default/grub
+  replace:
+    dest: /etc/default/grub
+    regexp: systemd.confirm_spawn=(1|yes|true|on)
+    replace: systemd.confirm_spawn=no
+  when:
+  - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
+  - grub2_disable_interactive_boot | bool
+  - reboot_required | bool
+  - restrict_strategy | bool
+  - medium_severity | bool
+  - low_disruption | bool
+  - low_complexity | bool
+  tags:
+  - grub2_disable_interactive_boot
+  - medium_severity
+  - restrict_strategy
+  - low_complexity
+  - low_disruption
+  - reboot_required
+  - CCE-27335-9
+  - NIST-800-53-SC-2(1)
+  - NIST-800-53-CM-6(a)
+  - NIST-800-171-3.1.2
+  - NIST-800-171-3.4.5
+
+- name: Verify that Interactive Boot is Disabled (runtime)
+  command: /sbin/grubby --update-kernel=ALL --remove-args="systemd.confirm_spawn"
+  when:
+  - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
+  - grub2_disable_interactive_boot | bool
+  - reboot_required | bool
+  - restrict_strategy | bool
+  - medium_severity | bool
+  - low_disruption | bool
+  - low_complexity | bool
+  tags:
+  - grub2_disable_interactive_boot
+  - medium_severity
+  - restrict_strategy
+  - low_complexity
+  - low_disruption
+  - reboot_required
+  - CCE-27335-9
+  - NIST-800-53-SC-2(1)
+  - NIST-800-53-CM-6(a)
+  - NIST-800-171-3.1.2
+  - NIST-800-171-3.4.5
