--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,334 +1,12 @@
 ---
 - include: repos.yml
 
-- name: Enable service firewalld
-  block:
-  - name: Gather the package facts
-    package_facts:
-      manager: auto
-  - name: Enable service firewalld
-    service:
-      name: firewalld
-      enabled: 'yes'
-      state: started
-    when:
-    - '"firewalld" in ansible_facts.packages'
+- include: fips.yml
   when:
-  - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - service_firewalld_enabled | bool
-  - no_reboot_needed | bool
-  - medium_severity | bool
-  - enable_strategy | bool
-  - low_disruption | bool
-  - low_complexity | bool
-  tags:
-  - service_firewalld_enabled
-  - medium_severity
-  - enable_strategy
-  - low_complexity
-  - low_disruption
-  - no_reboot_needed
-  - CCE-80998-8
-  - NIST-800-53-AC-4
-  - NIST-800-53-CM-7(b)
-  - NIST-800-53-CA-3(5)
-  - NIST-800-53-SC-7(21)
-  - NIST-800-53-CM-6(a)
-  - NIST-800-171-3.1.3
-  - NIST-800-171-3.4.7
-  - DISA-STIG-RHEL-07-040520
-
-- name: Ensure SELinux State is Enforcing
-  lineinfile:
-    path: /etc/sysconfig/selinux
-    regexp: ^SELINUX=
-    line: SELINUX={{ var_selinux_state }}
-    create: true
-  when:
-  - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - no_reboot_needed | bool
-  - restrict_strategy | bool
-  - high_severity | bool
-  - low_disruption | bool
-  - selinux_state | bool
-  - low_complexity | bool
-  tags:
-  - selinux_state
-  - high_severity
-  - restrict_strategy
-  - low_complexity
-  - low_disruption
-  - no_reboot_needed
-  - CCE-27334-2
-  - NIST-800-53-AC-3
-  - NIST-800-53-AC-3(3)(a)
-  - NIST-800-53-AU-9
-  - NIST-800-53-SC-7(21)
-  - NIST-800-171-3.1.2
-  - NIST-800-171-3.7.2
-  - DISA-STIG-RHEL-07-020210
-
-- name: Configure SELinux Policy
-  lineinfile:
-    path: /etc/sysconfig/selinux
-    regexp: ^SELINUXTYPE=
-    line: SELINUXTYPE={{ var_selinux_policy_name }}
-    create: true
-  when:
-  - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - no_reboot_needed | bool
-  - restrict_strategy | bool
-  - high_severity | bool
-  - selinux_policytype | bool
-  - low_disruption | bool
-  - low_complexity | bool
-  tags:
-  - selinux_policytype
-  - high_severity
-  - restrict_strategy
-  - low_complexity
-  - low_disruption
-  - no_reboot_needed
-  - CCE-27279-9
-  - NIST-800-53-AC-3
-  - NIST-800-53-AC-3(3)(a)
-  - NIST-800-53-AU-9
-  - NIST-800-53-SC-7(21)
-  - NIST-800-171-3.1.2
-  - NIST-800-171-3.7.2
-  - DISA-STIG-RHEL-07-020220
-
-- name: Restrict Virtual Console Root Logins
-  lineinfile:
-    dest: /etc/securetty
-    regexp: ^vc
-    state: absent
-  tags:
-  - securetty_root_login_console_only
-  - medium_severity
-  - restrict_strategy
-  - low_complexity
-  - low_disruption
-  - no_reboot_needed
-  - CCE-27318-5
-  - NIST-800-53-AC-6
-  - NIST-800-53-CM-6(a)
-  - NIST-800-171-3.1.1
-  - NIST-800-171-3.1.5
-  when:
-  - no_reboot_needed | bool
-  - restrict_strategy | bool
-  - securetty_root_login_console_only | bool
-  - medium_severity | bool
-  - low_disruption | bool
-  - low_complexity | bool
-
-- name: Set Password Minimum Length in login.defs
-  lineinfile:
-    dest: /etc/login.defs
-    regexp: ^PASS_MIN_LEN *[0-9]*
-    state: present
-    line: PASS_MIN_LEN        {{ var_accounts_password_minlen_login_defs }}
-    create: true
-  tags:
-  - accounts_password_minlen_login_defs
-  - medium_severity
-  - restrict_strategy
-  - low_complexity
-  - low_disruption
-  - no_reboot_needed
-  - CCE-82049-8
-  - NIST-800-53-IA-5(f)
-  - NIST-800-53-IA-5(1)(a)
-  - NIST-800-53-CM-6(a)
-  - NIST-800-171-3.5.7
-  - CJIS-5.6.2.1
-  when:
-  - accounts_password_minlen_login_defs | bool
-  - no_reboot_needed | bool
-  - restrict_strategy | bool
-  - medium_severity | bool
-  - low_disruption | bool
-  - low_complexity | bool
-
-- name: Limit the Number of Concurrent Login Sessions Allowed Per User
-  lineinfile:
-    state: present
-    dest: /etc/security/limits.conf
-    insertbefore: ^# End of file
-    regexp: ^#?\*.*maxlogins
-    line: '*           hard    maxlogins     {{ var_accounts_max_concurrent_login_sessions }}'
-    create: true
-  tags:
-  - accounts_max_concurrent_login_sessions
-  - low_severity
-  - restrict_strategy
-  - low_complexity
-  - low_disruption
-  - no_reboot_needed
-  - CCE-82041-5
-  - NIST-800-53-AC-10
-  - NIST-800-53-CM-6(a)
-  - CJIS-5.5.2.2
-  - DISA-STIG-RHEL-07-040000
-  when:
-  - no_reboot_needed | bool
-  - restrict_strategy | bool
-  - accounts_max_concurrent_login_sessions | bool
-  - low_severity | bool
-  - low_disruption | bool
-  - low_complexity | bool
-
-- name: Set user umask in /etc/bashrc
-  replace:
-    path: /etc/bashrc
-    regexp: umask.*
-    replace: umask {{ var_accounts_user_umask }}
-  tags:
-  - accounts_umask_etc_bashrc
-  - unknown_severity
-  - restrict_strategy
-  - low_complexity
-  - low_disruption
-  - no_reboot_needed
-  - CCE-80202-5
-  - NIST-800-53-AC-6(1)
-  - NIST-800-53-CM-6(a)
-  when:
-  - unknown_severity | bool
-  - no_reboot_needed | bool
-  - restrict_strategy | bool
-  - accounts_umask_etc_bashrc | bool
-  - low_disruption | bool
-  - low_complexity | bool
-
-- name: Set user umask in /etc/csh.cshrc
-  replace:
-    path: /etc/csh.cshrc
-    regexp: umask.*
-    replace: umask {{ var_accounts_user_umask }}
-  tags:
-  - accounts_umask_etc_csh_cshrc
-  - unknown_severity
-  - restrict_strategy
-  - low_complexity
-  - low_disruption
-  - no_reboot_needed
-  - CCE-80203-3
-  - NIST-800-53-AC-6(1)
-  - NIST-800-53-CM-6(a)
-  when:
-  - unknown_severity | bool
-  - accounts_umask_etc_csh_cshrc | bool
-  - no_reboot_needed | bool
-  - restrict_strategy | bool
-  - low_disruption | bool
-  - low_complexity | bool
-
-- name: Set user umask in /etc/profile
-  replace:
-    path: /etc/profile
-    regexp: umask.*
-    replace: umask {{ var_accounts_user_umask }}
-  tags:
-  - accounts_umask_etc_profile
-  - unknown_severity
-  - restrict_strategy
-  - low_complexity
-  - low_disruption
-  - no_reboot_needed
-  - CCE-80204-1
-  - NIST-800-53-AC-6(1)
-  - NIST-800-53-CM-6(a)
-  when:
-  - unknown_severity | bool
-  - no_reboot_needed | bool
-  - restrict_strategy | bool
-  - accounts_umask_etc_profile | bool
-  - low_disruption | bool
-  - low_complexity | bool
-
-- name: Verify that Interactive Boot is Disabled in /etc/default/grub
-  replace:
-    dest: /etc/default/grub
-    regexp: systemd.confirm_spawn=(1|yes|true|on)
-    replace: systemd.confirm_spawn=no
-  when:
-  - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - grub2_disable_interactive_boot | bool
-  - reboot_required | bool
-  - restrict_strategy | bool
-  - medium_severity | bool
-  - low_disruption | bool
-  - low_complexity | bool
-  tags:
-  - grub2_disable_interactive_boot
-  - medium_severity
-  - restrict_strategy
-  - low_complexity
-  - low_disruption
-  - reboot_required
-  - CCE-27335-9
-  - NIST-800-53-SC-2(1)
-  - NIST-800-53-CM-6(a)
-  - NIST-800-171-3.1.2
-  - NIST-800-171-3.4.5
-
-- name: Verify that Interactive Boot is Disabled (runtime)
-  command: /sbin/grubby --update-kernel=ALL --remove-args="systemd.confirm_spawn"
-  when:
-  - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - grub2_disable_interactive_boot | bool
-  - reboot_required | bool
-  - restrict_strategy | bool
-  - medium_severity | bool
-  - low_disruption | bool
-  - low_complexity | bool
-  tags:
-  - grub2_disable_interactive_boot
-  - medium_severity
-  - restrict_strategy
-  - low_complexity
-  - low_disruption
-  - reboot_required
-  - CCE-27335-9
-  - NIST-800-53-SC-2(1)
-  - NIST-800-53-CM-6(a)
-  - NIST-800-171-3.1.2
-  - NIST-800-171-3.4.5
-
-- name: require single user mode password
-  lineinfile:
-    create: true
-    dest: /usr/lib/systemd/system/rescue.service
-    regexp: ^#?ExecStart=
-    line: ExecStart=-/bin/sh -c "/sbin/sulogin; /usr/bin/systemctl --fail --no-block default"
-  when:
-  - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
-  - require_singleuser_auth | bool
-  - no_reboot_needed | bool
-  - restrict_strategy | bool
-  - medium_severity | bool
-  - low_disruption | bool
-  - low_complexity | bool
-  tags:
-  - require_singleuser_auth
-  - medium_severity
-  - restrict_strategy
-  - low_complexity
-  - low_disruption
-  - no_reboot_needed
-  - CCE-27287-2
-  - NIST-800-53-IA-2
-  - NIST-800-53-AC-3
-  - NIST-800-53-CM-6(a)
-  - NIST-800-171-3.1.1
-  - NIST-800-171-3.4.5
-  - DISA-STIG-RHEL-07-010481
+  - grub2_enable_fips_mode | bool
 
 - include: audit.yml
 - include: disable.yml
-- include: fips.yml
 - include: install.yml
 - include: locale.yml
 - include: misc.yml
