--- a/tasks/misc.yml
+++ b/tasks/misc.yml
@@ -1,4 +1,95 @@
 ---
+- name: Enable service firewalld
+  block:
+  - name: Gather the package facts
+    package_facts:
+      manager: auto
+  - name: Enable service firewalld
+    service:
+      name: firewalld
+      enabled: 'yes'
+      state: started
+    when:
+    - '"firewalld" in ansible_facts.packages'
+  when:
+  - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
+  - service_firewalld_enabled | bool
+  - medium_severity | bool
+  - enable_strategy | bool
+  - low_disruption | bool
+  - low_complexity | bool
+  tags:
+  - service_firewalld_enabled
+  - medium_severity
+  - enable_strategy
+  - low_complexity
+  - low_disruption
+  - CCE-80998-8
+  - NIST-800-53-AC-4
+  - NIST-800-53-CM-7(b)
+  - NIST-800-53-CA-3(5)
+  - NIST-800-53-SC-7(21)
+  - NIST-800-53-CM-6(a)
+  - NIST-800-171-3.1.3
+  - NIST-800-171-3.4.7
+  - DISA-STIG-RHEL-07-040520
+
+- name: Ensure SELinux state is Enforcing
+  lineinfile:
+    path: /etc/sysconfig/selinux
+    regexp: ^SELINUX=
+    line: SELINUX={{ var_selinux_state }}
+    create: true
+  when:
+  - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
+  - restrict_strategy | bool
+  - high_severity | bool
+  - low_disruption | bool
+  - selinux_state | bool
+  - low_complexity | bool
+  tags:
+  - selinux_state
+  - high_severity
+  - restrict_strategy
+  - low_complexity
+  - low_disruption
+  - CCE-27334-2
+  - NIST-800-53-AC-3
+  - NIST-800-53-AC-3(3)(a)
+  - NIST-800-53-AU-9
+  - NIST-800-53-SC-7(21)
+  - NIST-800-171-3.1.2
+  - NIST-800-171-3.7.2
+  - DISA-STIG-RHEL-07-020210
+
+- name: Configure SELinux policy
+  lineinfile:
+    path: /etc/sysconfig/selinux
+    regexp: ^SELINUXTYPE=
+    line: SELINUXTYPE={{ var_selinux_policy_name }}
+    create: true
+  when:
+  - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
+  - restrict_strategy | bool
+  - high_severity | bool
+  - selinux_policytype | bool
+  - low_disruption | bool
+  - low_complexity | bool
+  tags:
+  - selinux_policytype
+  - high_severity
+  - restrict_strategy
+  - low_complexity
+  - low_disruption
+  - CCE-27279-9
+  - NIST-800-53-AC-3
+  - NIST-800-53-AC-3(3)(a)
+  - NIST-800-53-AU-9
+  - NIST-800-53-SC-7(21)
+  - NIST-800-171-3.1.2
+  - NIST-800-171-3.7.2
+  - DISA-STIG-RHEL-07-020220
+
 - name: check vsyscall argument exists
   command: grep 'GRUB_CMDLINE_LINUX.*vsyscall=' /etc/default/grub
   failed_when: false
