--- a/tasks/pam.yml
+++ b/tasks/pam.yml
@@ -10,7 +10,6 @@
   - configure_strategy
   - low_complexity
   - medium_disruption
-  - no_reboot_needed
   - CCE-27286-4
   - NIST-800-53-IA-5(1)(a)
   - NIST-800-53-IA-5(c)
@@ -22,7 +21,6 @@
   - DISA-STIG-RHEL-07-010290
   when:
   - no_empty_passwords | bool
-  - no_reboot_needed | bool
   - high_severity | bool
   - configure_strategy | bool
   - medium_disruption | bool
@@ -39,7 +37,6 @@
   - configure_strategy
   - low_complexity
   - medium_disruption
-  - no_reboot_needed
   - CCE-27286-4
   - NIST-800-53-IA-5(1)(a)
   - NIST-800-53-IA-5(c)
@@ -51,7 +48,6 @@
   - DISA-STIG-RHEL-07-010290
   when:
   - no_empty_passwords | bool
-  - no_reboot_needed | bool
   - high_severity | bool
   - configure_strategy | bool
   - medium_disruption | bool
@@ -69,7 +65,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27200-5
   - NIST-800-53-IA-5(c)
   - NIST-800-53-IA-5(1)(a)
@@ -78,7 +73,6 @@
   - PCI-DSS-Req-8.2.3
   - DISA-STIG-RHEL-07-010120
   when:
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - accounts_password_pam_ucredit | bool
   - medium_severity | bool
@@ -97,7 +91,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-82055-5
   - NIST-800-53-IA-5(c)
   - NIST-800-53-CM-6(a)
@@ -105,7 +98,6 @@
   - DISA-STIG-RHEL-07-010180
   when:
   - accounts_password_pam_maxrepeat | bool
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - low_disruption | bool
@@ -123,7 +115,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27360-7
   - NIST-800-53-IA-5(c)
   - NIST-800-53-IA-5(1)(a)
@@ -131,7 +122,6 @@
   - NIST-800-53-IA-5(4)
   - DISA-STIG-RHEL-07-010150
   when:
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - accounts_password_pam_ocredit | bool
   - medium_severity | bool
@@ -150,7 +140,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27345-8
   - NIST-800-53-IA-5(c)
   - NIST-800-53-IA-5(1)(a)
@@ -159,7 +148,6 @@
   - PCI-DSS-Req-8.2.3
   - DISA-STIG-RHEL-07-010130
   when:
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - accounts_password_pam_lcredit | bool
   - medium_severity | bool
@@ -178,7 +166,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27293-0
   - NIST-800-53-IA-5(c)
   - NIST-800-53-IA-5(1)(a)
@@ -189,7 +176,6 @@
   - DISA-STIG-RHEL-07-010280
   when:
   - accounts_password_pam_minlen | bool
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - low_disruption | bool
@@ -207,7 +193,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27512-3
   - NIST-800-53-IA-5(c)
   - NIST-800-53-IA-5(1)(a)
@@ -216,7 +201,6 @@
   - DISA-STIG-RHEL-07-010190
   when:
   - accounts_password_pam_maxclassrepeat | bool
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - low_disruption | bool
@@ -234,7 +218,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27214-6
   - NIST-800-53-IA-5(c)
   - NIST-800-53-IA-5(1)(a)
@@ -244,7 +227,6 @@
   - DISA-STIG-RHEL-07-010140
   when:
   - accounts_password_pam_dcredit | bool
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - low_disruption | bool
@@ -262,7 +244,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-82020-9
   - NIST-800-53-IA-5(c)
   - NIST-800-53-IA-5(1)(b)
@@ -271,7 +252,6 @@
   - CJIS-5.6.2.1.1
   - DISA-STIG-RHEL-07-010160
   when:
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - accounts_password_pam_difok | bool
   - medium_severity | bool
@@ -298,7 +278,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27350-8
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-7(a)
@@ -308,7 +287,6 @@
   - DISA-STIG-RHEL-07-010320
   when:
   - accounts_passwords_pam_faillock_deny | bool
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - low_disruption | bool
@@ -331,7 +309,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27350-8
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-7(a)
@@ -341,7 +318,6 @@
   - DISA-STIG-RHEL-07-010320
   when:
   - accounts_passwords_pam_faillock_deny | bool
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - low_disruption | bool
@@ -367,7 +343,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27350-8
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-7(a)
@@ -377,7 +352,6 @@
   - DISA-STIG-RHEL-07-010320
   when:
   - accounts_passwords_pam_faillock_deny | bool
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - low_disruption | bool
@@ -401,7 +375,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27350-8
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-7(a)
@@ -411,7 +384,6 @@
   - DISA-STIG-RHEL-07-010320
   when:
   - accounts_passwords_pam_faillock_deny | bool
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - low_disruption | bool
@@ -436,7 +408,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27350-8
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-7(a)
@@ -446,7 +417,6 @@
   - DISA-STIG-RHEL-07-010320
   when:
   - accounts_passwords_pam_faillock_deny | bool
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - low_disruption | bool
@@ -472,7 +442,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-26884-7
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-7(b)
@@ -481,7 +450,6 @@
   - CJIS-5.5.3
   - DISA-STIG-RHEL-07-010320
   when:
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - accounts_passwords_pam_faillock_unlock_time | bool
@@ -505,7 +473,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-26884-7
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-7(b)
@@ -514,7 +481,6 @@
   - CJIS-5.5.3
   - DISA-STIG-RHEL-07-010320
   when:
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - accounts_passwords_pam_faillock_unlock_time | bool
@@ -541,7 +507,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-26884-7
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-7(b)
@@ -550,7 +515,6 @@
   - CJIS-5.5.3
   - DISA-STIG-RHEL-07-010320
   when:
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - accounts_passwords_pam_faillock_unlock_time | bool
@@ -574,7 +538,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-26884-7
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-7(b)
@@ -583,7 +546,6 @@
   - CJIS-5.5.3
   - DISA-STIG-RHEL-07-010320
   when:
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - accounts_passwords_pam_faillock_unlock_time | bool
@@ -609,7 +571,6 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-26884-7
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-7(b)
@@ -618,7 +579,6 @@
   - CJIS-5.5.3
   - DISA-STIG-RHEL-07-010320
   when:
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - accounts_passwords_pam_faillock_unlock_time | bool
@@ -637,7 +597,6 @@
   - configure_strategy
   - low_complexity
   - medium_disruption
-  - no_reboot_needed
   - CCE-82030-8
   - NIST-800-53-IA-5(f)
   - NIST-800-53-IA-5(1)(e)
@@ -646,7 +605,6 @@
   - CJIS-5.6.2.1.1
   - DISA-STIG-RHEL-07-010270
   when:
-  - no_reboot_needed | bool
   - configure_strategy | bool
   - medium_severity | bool
   - medium_disruption | bool
@@ -665,7 +623,6 @@
   - configure_strategy
   - low_complexity
   - medium_disruption
-  - no_reboot_needed
   - CCE-82030-8
   - NIST-800-53-IA-5(f)
   - NIST-800-53-IA-5(1)(e)
@@ -674,7 +631,6 @@
   - CJIS-5.6.2.1.1
   - DISA-STIG-RHEL-07-010270
   when:
-  - no_reboot_needed | bool
   - configure_strategy | bool
   - medium_severity | bool
   - medium_disruption | bool
@@ -701,13 +657,11 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27297-1
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-7(a)
   - DISA-STIG-RHEL-07-010320
   when:
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - accounts_passwords_pam_faillock_interval | bool
@@ -731,13 +685,11 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27297-1
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-7(a)
   - DISA-STIG-RHEL-07-010320
   when:
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - accounts_passwords_pam_faillock_interval | bool
@@ -764,13 +716,11 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27297-1
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-7(a)
   - DISA-STIG-RHEL-07-010320
   when:
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - accounts_passwords_pam_faillock_interval | bool
@@ -794,13 +744,11 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27297-1
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-7(a)
   - DISA-STIG-RHEL-07-010320
   when:
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - accounts_passwords_pam_faillock_interval | bool
@@ -826,15 +774,115 @@
   - restrict_strategy
   - low_complexity
   - low_disruption
-  - no_reboot_needed
   - CCE-27297-1
   - NIST-800-53-CM-6(a)
   - NIST-800-53-AC-7(a)
   - DISA-STIG-RHEL-07-010320
   when:
-  - no_reboot_needed | bool
   - restrict_strategy | bool
   - medium_severity | bool
   - accounts_passwords_pam_faillock_interval | bool
   - low_disruption | bool
   - low_complexity | bool
+
+- name: Restrict root login over virtual console devices
+  lineinfile:
+    dest: /etc/securetty
+    regexp: ^vc
+    state: absent
+  tags:
+  - securetty_root_login_console_only
+  - medium_severity
+  - restrict_strategy
+  - low_complexity
+  - low_disruption
+  - CCE-27318-5
+  - NIST-800-53-AC-6
+  - NIST-800-53-CM-6(a)
+  - NIST-800-171-3.1.1
+  - NIST-800-171-3.1.5
+  when:
+  - restrict_strategy | bool
+  - securetty_root_login_console_only | bool
+  - medium_severity | bool
+  - low_disruption | bool
+  - low_complexity | bool
+
+- name: Set minimum length for passwords in login.defs
+  lineinfile:
+    dest: /etc/login.defs
+    regexp: ^PASS_MIN_LEN *[0-9]*
+    state: present
+    line: PASS_MIN_LEN        {{ var_accounts_password_minlen_login_defs }}
+    create: true
+  tags:
+  - accounts_password_minlen_login_defs
+  - medium_severity
+  - restrict_strategy
+  - low_complexity
+  - low_disruption
+  - CCE-82049-8
+  - NIST-800-53-IA-5(f)
+  - NIST-800-53-IA-5(1)(a)
+  - NIST-800-53-CM-6(a)
+  - NIST-800-171-3.5.7
+  - CJIS-5.6.2.1
+  when:
+  - accounts_password_minlen_login_defs | bool
+  - restrict_strategy | bool
+  - medium_severity | bool
+  - low_disruption | bool
+  - low_complexity | bool
+
+- name: Limit maximum concurrent login sessions per user
+  lineinfile:
+    state: present
+    dest: /etc/security/limits.conf
+    insertbefore: ^# End of file
+    regexp: ^#?\*.*maxlogins
+    line: '*           hard    maxlogins     {{ var_accounts_max_concurrent_login_sessions }}'
+    create: true
+  tags:
+  - accounts_max_concurrent_login_sessions
+  - low_severity
+  - restrict_strategy
+  - low_complexity
+  - low_disruption
+  - CCE-82041-5
+  - NIST-800-53-AC-10
+  - NIST-800-53-CM-6(a)
+  - CJIS-5.5.2.2
+  - DISA-STIG-RHEL-07-040000
+  when:
+  - restrict_strategy | bool
+  - accounts_max_concurrent_login_sessions | bool
+  - low_severity | bool
+  - low_disruption | bool
+  - low_complexity | bool
+
+- name: Require password for single-user mode
+  lineinfile:
+    create: true
+    dest: /usr/lib/systemd/system/rescue.service
+    regexp: ^#?ExecStart=
+    line: ExecStart=-/bin/sh -c "/sbin/sulogin; /usr/bin/systemctl --fail --no-block default"
+  when:
+  - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
+  - require_singleuser_auth | bool
+  - restrict_strategy | bool
+  - medium_severity | bool
+  - low_disruption | bool
+  - low_complexity | bool
+  tags:
+  - require_singleuser_auth
+  - medium_severity
+  - restrict_strategy
+  - low_complexity
+  - low_disruption
+  - CCE-27287-2
+  - NIST-800-53-IA-2
+  - NIST-800-53-AC-3
+  - NIST-800-53-CM-6(a)
+  - NIST-800-171-3.1.1
+  - NIST-800-171-3.4.5
+  - DISA-STIG-RHEL-07-010481
