re-add dracut-fips task in case ! aesni_supported

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -10,7 +10,9 @@ install_package_list: [
   'ansible',
   'clamav',
   'container-selinux',
+  'curl',
   'sssd',
+  'vim',
 ]
 remove_package_list: [
   'rsh',
